kubernetes/base/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  namespace: enterprise-dev
  labels:
    app: auth-service
    project: enterprise-devops-platform
    environment: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth-service

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: auth-service
        project: enterprise-devops-platform
        environment: dev

    spec:
      containers:
      - name: auth-service

        image: enterprise-devops-platform-auth-service:v1.0.0
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5000
          name: http
          protocol: TCP

        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
