kubernetes/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: enterprise-dev
  labels:
    app: frontend
    project: enterprise-devops-platform
    environment: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: frontend
        project: enterprise-devops-platform
        environment: dev

    spec:
      containers:
        - name: frontend

          image: enterprise-devops-platform-frontend:v1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
              name: http
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"
