kubernetes/base/api-gateway-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway-service
  namespace: enterprise-dev
  labels:
    app: api-gateway
    project: enterprise-devops-platform
    environment: dev

spec:
  selector:
    app: api-gateway

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

  type: ClusterIP
