kubernetes/base/auth-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: enterprise-dev
  labels:
    app: auth-service
    project: enterprise-devops-platform
    environment: dev

spec:
  selector:
    app: auth-service

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

  type: ClusterIP
