kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: enterprise-dev
  labels:
    app: frontend
    project: enterprise-devops-platform
    environment: dev

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
